--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>BoilerPlate</title>
-        <link rel="stylesheet" href="/static/css/main.css" />
+        <title>BoilerPlate1</title>
+        <link rel="stylesheet" href="css/main.css" />
     </head>
 
     <body>
         <div id="root"></div>
-        <script src="/static/bundle.js" charset="utf-8"></script>
+        <script src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
